feat: 🎸 removes readme and unecessary files

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 
 <button id='clear-board'>Limpar</button>
 
+
+  <div id = 'input-container'>
+  <input type="number" name="valor" id="entrada">
+	<input type="submit" name="" >
+  </div>
+
+
 <section id = 'pixel-board'>
 <div class ='line'>
   <div class = 'pixel'></div>
